--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -63,10 +63,17 @@ p a:hover, p a:active {
 .header-image {
     background-image: url("../images/forest-fire.jpg");
     background-size: cover;
+    border-bottom: 8px solid #F9AF3B;
+    height: calc(100vh - 120px) !important;
+    min-height: 500px;
 }
 .navbar a:link, .navbar a:visited {
     color: #f9af3b;
     text-transform: uppercase;
+    transition: all .2s ease-in-out;
+}
+.navbar a:hover, .navbar a:active {
+    color: #60411F;
 }
 .jumbotron {
     border-radius: 0px;
@@ -112,6 +119,21 @@ p a:hover, p a:active {
 }
 .border-yellow.btn {
     border-color: #f9af3b;
+}
+.btn.text-white:hover, .btn.text-white:active, .btn.text-white:focus {
+    background: #ffffff;
+    color: #919191 !important;
+}
+.btn.border-yellow.text-white {
+    transition: .1s all ease-in-out;
+}
+.btn.border-yellow.text-white:hover, .btn.border-yellow.text-white:active, .btn.border-yellow.text-white:focus {
+    background: #F9AF30;
+    color: #ffffff !important;
+}
+.btn.border-yellow:hover, .btn.border-yellow:active, .btn.border-yellow:focus {
+    background: #F96841;
+    color: #fff;
 }
 .yellow-line {
     width: 150px;
@@ -233,6 +255,24 @@ p a:hover, p a:active {
 }
 .readmore, .box-content .btn {
     margin-top: auto;
+}
+#header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #ffffff;
+    z-index: 999;
+    transition: 0.2s all ease-in-out;
+}
+#nav-row {
+    transition: 0.2s all ease-in-out;
+    padding: 1rem 0 1rem 0;
+}
+.content {
+    margin-top: 2rem;
+}
+.home .panel1 .title {
+    padding-top: 10vh;
 }
 /*——Media Queries——*/
 @media (min-width: 768px) {
