--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -240,8 +240,8 @@ p a:hover, p a:active {
     max-width: 150px;
 }
 .logos .white.circle img {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 100px !important;
+    max-height: 100px !important;
 }
 .topomap {
     background: url("../images/topo.jpg");
