--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -14,6 +14,17 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: "Avenir";
+    src: url("fonts/Avenir-Medium.woff") format("woff"), /* Modern Browsers */
+         url("fonts/Avenir-Medium.woff2") format("woff2"); /* Modern Browsers */
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+html {
+    scroll-behavior: smooth;
+}
 body {
     font-family: "Avenir";
     color: #60411f;
@@ -31,6 +42,7 @@ p a:link, p a:visited {
     font-weight: 700;
     border-bottom: 1px solid #333;
     color: #60411f;
+    text-decoration: none;
 }
 p a:hover, p a:active {
     text-decoration: none;
@@ -161,6 +173,9 @@ p a:hover, p a:active {
 .white.circle {
     max-width: 125px;
     max-height: 125px;
+    height: 125px;
+    width: 125px;
+    margin: 0 auto;
     background: #fff;
     border-radius: 50%;
     box-shadow: 0px 5px 10px rgba(0,0,0,.5);
@@ -398,7 +413,7 @@ p a:hover, p a:active {
     background-size: cover;
     background-position: center bottom;
 }
-.team .indv img {
+.team .indv img, .team-block img.headshot, .lightbox .headshot {
     box-shadow: 0px 3px 5px #CCC;
     border: 4px solid #FFFFFF;
 }
@@ -406,13 +421,80 @@ p a:hover, p a:active {
     box-shadow: 0px 3px 5px #CCC;
 }
 .team-page header {
-    background: #CCCCCC;
+    background: url(../images/team-header.jpg);
+    background-size: cover;
+    background-position: center center;
     border-top: 8px solid #F9AF3B;
     margin-top: calc(48px + 2.5rem);
     color: #FFFFFF;
+    min-height: 320px;
 }
 .wg .team .indv h3 {
     font-size: 1.5rem;
+}
+.team-block {
+    display: none;
+}
+.show {
+    display: block;
+}
+.team-block img.icon {
+    width: 24px;
+    height: 24px;
+}
+.teams-overview {
+    background: #DFDFDF;
+    color: #5A5A5A;
+}
+.team .btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  margin: 4px 0;
+  font-size: 12px;
+  font-weight: bold;
+}
+.team .btn:hover {
+  background-color: #ddd;
+}
+.team .btn.active {
+  background-color: #666;
+  color: white;
+}
+.team .btn.learn-more {
+    font-size: 12px;
+    padding: 6px 12px;
+    margin: 0px 10px;
+}
+.lightbox { 
+    display: none;
+}
+.lightbox img {
+    max-width: 100%;
+}
+.linkedin-icon {
+    width: 24px;
+    height: 24px;
+}
+.featherlight .featherlight-close-icon {
+    font-size: 22px !important;
+    line-height: 35px !important;
+    width: 35px !important;
+    background: #000000 !important;
+    color: #FFFFFF !important;
+}
+.team-block h3 a:link, .team-block h3 a:visited {
+    color: #60411f;
+    transition: all .1s ease-in-out;
+}
+.team-block h3 a:hover, .team-block h3 a:active, .team-block h3 a:focus {
+    text-decoration: none;
+    color: #000000;
+}
+.team-block p.role, .lightbox p.role {
+    font-weight: bold;
 }
 /*——Media Queries——*/
 @media (min-width: 768px) {
@@ -579,5 +661,14 @@ p a:hover, p a:active {
     .team .indv {
         width: 100%;
         text-align: center;
+    }
+    .team-block img.headshot {
+        width: 220px;
+    }
+    .team-block {
+        text-align: center;
+    }
+    .lightbox img.headshot {
+        width: 220px;
     }
 }
