Replaced broken links on home page and fixed #27 (Header links go missing if user clicks on hamburger menu in media mode)

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -563,6 +563,9 @@ article.documents-single .document-meta {
         justify-content: flex-end;
         align-items: centered;
     }
+    .mobilenav {
+        display: block !important;
+    }
 }
 @media only screen and (max-width: 991px) {
     .value-prop1 .features div:not(:last-child) {
