--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -470,7 +470,7 @@ p a:hover, p a:active {
   padding: 12px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
-  margin: 4px 0;
+  margin: 4px 0 4px 6px;
   font-size: 12px;
   font-weight: bold;
 }
