--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -103,12 +103,6 @@ p a:hover, p a:active {
     border-radius: 20px/50%;
     text-transform: uppercase;
 }
-.btn[disabled], .btn[disabled]:hover .btn[disabled]:active, .btn[disabled]:focus {
-  opacity: 0.3;
-  cursor: default;
-  background: transparent;
-  color: inherit;
-}
 .red.btn {
     border-color: #f9af3b;
     background: #f96841;
@@ -142,7 +136,7 @@ p a:hover, p a:active {
 .border-yellow.btn {
     border-color: #f9af3b;
 }
-.btn:not([disabled]).text-white:hover, .btn:not([disabled]).text-white:active {
+.btn.text-white:hover, .btn.text-white:active {
     background: #ffffff;
     color: #919191 !important;
 }
