--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -282,10 +282,16 @@ button,
 }
 
 button:not(:disabled),
+select:not(:disabled),
+input:not(:disabled),
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
 [type="submit"]:not(:disabled) {
   cursor: pointer;
+}
+
+select:disabled {
+  opacity: 0.5;
 }
 
 button::-moz-focus-inner,
