Fix View Logs styling

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -197,7 +197,7 @@ samp {
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
-  overflow: auto;
+  overflow: none;
   -ms-overflow-style: scrollbar;
 }
 
