--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -23,6 +23,14 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: "Roboto";
+    src: url("fonts/Roboto-VariableFont.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
